Fixed details app overflow on discord links

--- a/html/css/details.css
+++ b/html/css/details.css
@@ -70,6 +70,10 @@
     width: 100%;
     margin-left: 3%;
     margin-bottom: 2%;
+    max-width: 90%;
+    white-space: nowrap;
+    overflow: hidden !important;
+    text-overflow: ellipsis;
 }
 
 .details-icon-class{
